# rapid-class-finder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  fly.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
src/data/: db.rs  mod.rs  queries.rs  types.rs
src/data/sql/: course_count.sql  insert_course.sql  schema.sql  search.sql
