[package]
name = "rapid-class-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.28", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
thiserror = "1"
log = { version = "0.4", features = ["std"] }
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
fallible-iterator = "0.2"
itertools = "0.10"
axum = { version = "0.5", features = ["http2"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = true